# a-line

./: .gitignore  A-LINER_中文使用教程.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
a_liner/: alignment.py  cli.py  common.py  genes.py  highlight.py  scatterplot.py  seqs.py
sample_data/a_Stx-phages/: runme.sh
sample_data/a_Stx-phages/input/: E.coli_Sakai_stx-phage_locus.gff  S.sonnei_2015AM-1099_stx-phage_locus.gff  color_legend_map.txt  highlights.txt  sequence_config.xlsx
sample_data/a_Stx-phages/input/GCcontent_files/: E.albertii_NCTC9362_GCcontent_w1000-s100.txt  E.coli_Sakai_GCcontent_w1000-s100.txt  S.sonnei_2015AM-1099_GCcontent_w1000-s100.txt
sample_data/b_ostrich-emu/: highlights.txt  runme.sh
sample_data/b_ostrich-emu/est-copy/: male-emu_est-copy.txt  male-ostrich_est-copy.txt
sample_data/b_ostrich-emu/minimap2/: emu-Z_emu-W_shift.paf  ostrich-Z_ostrich-W_shift.paf
sample_data/b_ostrich-emu/seq_info/: lyla_emu-chrW.txt  lyla_emu-chrZ.txt  lyla_ostrich-chrW.txt  lyla_ostrich-chrZ.txt  sequence_config.txt
